@@ -22,14 +22,15 @@ import org.kohsuke.stapler.DataBoundSetter;
 import org.kohsuke.stapler.QueryParameter;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 
-public class GrafanaBackend extends ObservabilityBackend implements TemplateBindingsProvider {
+public class GrafanaBackend extends ObservabilityBackend {
 
     public static final String DEFAULT_BACKEND_NAME = "Grafana";
 
@@ -266,8 +267,8 @@ public class GrafanaBackend extends ObservabilityBackend implements TemplateBind
                 return FormValidation.ok();
             }
             try {
-                new URL(grafanaBaseUrl);
-            } catch (MalformedURLException e) {
+                new URI(grafanaBaseUrl).toURL();
+            } catch (URISyntaxException | MalformedURLException e) {
                 return FormValidation.error("Invalid URL: " + e.getMessage());
             }
             return FormValidation.ok();
